Menus: fix align

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -69,7 +69,14 @@
         padding-right: 0;
       }
     }
+
     // vsm mobile menu
+    .vsm-section_menu {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 50px;
+    }
     .vsm-section_mob {
       .vsm-mob-line,
       .vsm-mob-close:before,
@@ -98,6 +105,8 @@
 
     &-item {
       font-size: 1.1rem;
+      height: auto;
+      line-height: 1;
       text-transform: uppercase;
       text-decoration: none;
       color: $grey;
